# Flask-TMDb-API

./: README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
api/: routes.py  schemas.py
services/: tmdb.py
utils/: decorators.py  errors.py
