[project]
name = "repl-nix-flask-tmdb-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-caching>=2.3.0",
    "flask-limiter>=3.8.0",
    "jsonschema>=4.23.0",
    "requests>=2.32.3",
]
